--- a/RH/rh.html
+++ b/RH/rh.html
@@ -11,5 +11,33 @@
 </head>
 <body>
     <h1>Welcome to Human Resources</h1>
+    <form id="employeeForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required><br>
+
+        <label for="last_name">Last Name:</label>
+        <input type="text" id="last_name" required><br>
+
+        <label for="phone">Phone:</label>
+        <input type="text" id="phone" required><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" required><br>
+
+        <label for="address">Address:</label>
+        <input type="text" id="address" required><br><br>
+
+        <button type="button" onclick="createEmployee()">Add Employee</button>
+        <button type="button" onclick="updateEmployee()">Update Employee</button>
+        <button type="button" onclick="deleteEmployee()">Delete Employee</button>
+    </form>
+<br> <br>
+    <label for="employeeId">Employee ID (for update/delete):</label>
+    <input type="text" id="employeeId"><br><br>
+
+    <div id="result"></div>
+    <script src="./js/employees.js"></script>
+    <br><br>
+    <h1>EMPLOYEES</h1> <br>
 </body>
 </html>
