--- a/RH/login.html
+++ b/RH/login.html
@@ -8,6 +8,7 @@
     <title>Human Resources</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/RH/Styles/login.css">
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -20,7 +21,7 @@
     <div class="container">
         <div class="row mt-5">
             <div class="col-6 offset-3">
-                <h1>Login</h1>
+                <h1> Human Resourcess - Login</h1>
             </div>
         </div>
         <div class="row align-items-center">
