Corregida ruta de estilos y cambios en los mismos

--- a/RH/rh.html
+++ b/RH/rh.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Resources</title>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/RH/Styles/rh.css">
+    <link rel="stylesheet" href="Styles/rh.css">
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script src="./js/rh.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>  
@@ -38,8 +38,9 @@
         <label for="employeeId">Employee ID (for update/delete):</label>
         <input type="text" id="employeeId">
     </div>
-    <div id="result">
+    <div id="resultlabel">
         <h1>Result of the query</h1>
+        <div id="result"></div>
     </div>
     <div id="empdisplay">    
         <h1>EMPLOYEES</h1> <br>
